--- a/scripts/notebooks/combine_functions.ipynb
+++ b/scripts/notebooks/combine_functions.ipynb
@@ -365,7 +365,7 @@
    "id": "07556499",
    "metadata": {},
    "source": [
-    "suplier1"
+    "supplier1"
    ]
   },
   {
@@ -751,7 +751,7 @@
    "id": "bd0f86a5",
    "metadata": {},
    "source": [
-    "suplier2"
+    "supplier2"
    ]
   },
   {
