--- a/scripts/notebooks/combine_functions.ipynb
+++ b/scripts/notebooks/combine_functions.ipynb
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "68ebf3c1",
    "metadata": {},
    "outputs": [],
@@ -1733,15 +1733,11 @@
     "]\n",
     "\n",
     "# Add missing columns to supplier1\n",
-    "raw_supplier1[\"material\"] = np.nan\n",
-    "raw_supplier1[\"reserved\"] = np.nan\n",
+    "raw_supplier1[[\"material\", \"reserved\"]] = np.nan\n",
     "raw_supplier1[\"source\"] = \"supplier1\"\n",
     "\n",
     "# Step 3: Add missing columns to supplier2\n",
-    "raw_supplier2[\"grade\"] = np.nan\n",
-    "raw_supplier2[\"finish\"] = np.nan\n",
-    "raw_supplier2[\"thickness_mm\"] = np.nan\n",
-    "raw_supplier2[\"width_mm\"] = np.nan\n",
+    "raw_supplier2[[\"finish\", \"thickness_mm\", \"width_mm\"]] = np.nan\n",
     "raw_supplier2[\"source\"] = \"supplier2\"\n",
     "\n",
     "# Reorder both DataFrames\n",
