enw several lines by starting them with '#' and some linecode wrapping

--- a/scripts/notebooks/combine_functions.ipynb
+++ b/scripts/notebooks/combine_functions.ipynb
@@ -36,11 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "52b534fb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# edite the file paths to your local paths\n",
     "data_path1 = (r\"C:\\Users\\black\\vanilla-steel-assessment\\data\\supplier_data1.xlsx\")\n",
     "data_path2 = (r\"C:\\Users\\black\\vanilla-steel-assessment\\data\\supplier_data2.xlsx\")"
    ]
