--- a/scripts/notebooks/rfq_similarity_functions.ipynb
+++ b/scripts/notebooks/rfq_similarity_functions.ipynb
@@ -29,12 +29,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad4b5557",
+   "metadata": {},
+   "source": [
+    "data path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "1ca3293d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# edite the file paths to your local paths\n",
     "rfq_path = (r\"C:\\Users\\black\\vanilla-steel-assessment\\data\\rfq.csv\")\n",
     "ref_path = (r\"C:\\Users\\black\\vanilla-steel-assessment\\data\\reference_properties.tsv\")"
    ]
@@ -1718,7 +1727,7 @@
     "# Apply to Carbon (C) column    \n",
     "df_joined['Carbon_clean'] = df_joined['Carbon (C)'].apply(parse_numeric_range)\n",
     "\n",
-    "# impute\n",
+    "# impute to filling missing values with the median\n",
     "median_val = df_joined['Carbon_clean'].median()\n",
     "df_joined['Carbon_clean'] = df_joined['Carbon_clean'].fillna(median_val)\n"
    ]
@@ -1740,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "7161fc96",
    "metadata": {},
    "outputs": [
@@ -1865,6 +1874,7 @@
     }
    ],
    "source": [
+    "#show the before and after cleaning carbon column\n",
     "df_joined[['Carbon (C)', 'Carbon_C_clean']].head()"
    ]
   },
@@ -2766,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "3545ce29",
    "metadata": {},
    "outputs": [
@@ -2779,7 +2789,7 @@
     }
    ],
    "source": [
-    "# Save\n",
+    "# Save the final result as csv output\n",
     "top3_df = pd.DataFrame(top3_results).head(3)\n",
     "top3_df.to_csv(\"../../output/top3.csv\", index=False)\n",
     "print(\"✅ top3.csv saved!\")"
